--- a/sass/main.scss
+++ b/sass/main.scss
@@ -242,13 +242,30 @@ main {
 
 @media screen and (max-width: 1023px) {
  
+  body {
+  font-size:1rem;
+  }
+  
   nav, main {
     width:92vw;
     margin:0 4vw;
   }
+  
+  pre {
+  width:92vw;
+  }
 
   #mobile {
     display: block;
+    outline:none;
+  }
+  
+  select {
+    font-size:1.375rem;
+  }
+  
+  .search-results__items {
+    list-style-position:inside;
   }
 
   #bger, #tax_list {
