mobile view improvments

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -247,17 +247,13 @@ main {
   
   nav, main {
     width:92vw;
-    margin:0 4vw;
-  }
-  
-  pre {
-  width:88%;
   }
 
   #mobile {
     display: block;
     outline:none;
     color:royalblue;
+    font-size:1.375rem;
   }
   
   select {
