--- a/sass/main.scss
+++ b/sass/main.scss
@@ -190,7 +190,7 @@ main {
 
     ul, ol {
       list-style-position: inside;
-      margin-bottom: 1rem;
+      margin:0 0 1rem 1rem;
     }
   
     a:visited {
