--- a/templates/search.html
+++ b/templates/search.html
@@ -16,10 +16,7 @@
         <ul class="search-results__items"></ul>
     </div>
 
-    <script src="{{ get_url(path="elasticlunr.min.js") | safe }}"></script>
-    <script src="{{ get_url(path="search_index.en.js") | safe }}"></script>
-    <script src="{{ get_url(path="search.js") | safe }}"></script>
+    <script defer src="{{ get_url(path='elasticlunr.min.js') | safe }}"></script>
+    <script defer src="{{ get_url(path='search_index.en.js') | safe }}"></script>
+    <script defer src="{{ get_url(path='search.js') | safe }}"></script>
 {% endblock content %}
-
-
-
